# ChangeLog for kde-base/kdeaccessibility
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaccessibility/ChangeLog,v 1.58 2005/02/27 22:58:53 greg_g Exp $

*kdeaccessibility-3.4.0_rc1 (27 Feb 2005)

  27 Feb 2005; Gregorio Guidi <greg_g@gentoo.org>
  +kdeaccessibility-3.4.0_rc1.ebuild:
  New version.

  22 Feb 2005; Hardave Riar <hardave@gentoo.org>
  kdeaccessibility-3.3.2.ebuild:
  Marked ~mips

  15 Feb 2005; Jason Wever <weeve@gentoo.org>
  kdeaccessibility-3.4.0_beta2.ebuild:
  Added ~sparc keyword.

*kdeaccessibility-3.4.0_beta2 (09 Feb 2005)

  09 Feb 2005; Gregorio Guidi <greg_g@gentoo.org>
  +kdeaccessibility-3.4.0_beta2.ebuild:
  Version bump. Added dependencies to text-to-speech engines.

  02 Feb 2005; Heinrich Wendel <lanius@gentoo.org>
  kdeaccessibility-3.4.0_beta1.ebuild:
  mark ~amd64

  23 Jan 2005; Markus Rothe <corsair@gentoo.org>
  kdeaccessibility-3.3.2.ebuild:
  Stable on ppc64; bug #78619

  15 Jan 2005; Dan Armak <danarmak@gentoo.org>
  kdeaccessibility-3.4.0_beta1.ebuild:
  Added blocking dep on x11-misc/kmousetool, an older version of an app now
  included here.

*kdeaccessibility-3.4.0_beta1 (13 Jan 2005)

  13 Jan 2005; Gregorio Guidi <greg_g@gentoo.org>
  +kdeaccessibility-3.4.0_beta1.ebuild:
  Introducing kde-3.4.0_beta1.

  04 Jan 2005; Guy Martin <gmsoft@gentoo.org> kdeaccessibility-3.3.2.ebuild:
  Stable on hppa.

  29 Dec 2004; Bryan Østergaard <kloeri@gentoo.org>
  kdeaccessibility-3.3.2.ebuild:
  Stable on alpha, bug 72750.

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  28 Dec 2004; Dylan Carlson <absinthe@gentoo.org>
  kdeaccessibility-3.3.2.ebuild:
  Stable on amd64.

  27 Dec 2004; Caleb Tennis <caleb@gentoo.org> kdeaccessibility-3.3.2.ebuild:
  x86 stable

  18 Dec 2004; Markus Rothe <corsair@gentoo.org>
  kdeaccessibility-3.3.1.ebuild:
  Stable on ppc64

*kdeaccessibility-3.3.2 (08 Dec 2004)
