@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaccessibility/kdeaccessibility-3.4.0_rc1.ebuild,v 1.1 2005/02/27 22:58:53 greg_g Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaccessibility/kdeaccessibility-3.4.0_rc1.ebuild,v 1.2 2005/03/07 16:59:11 greg_g Exp $
 
 inherit kde-dist
 
@@ -8,9 +8,17 @@ DESCRIPTION="KDE accessibility module"
 KEYWORDS="~x86 ~amd64 ~sparc"
 IUSE="arts"
 
-RDEPEND="arts? ( ~kde-base/arts-${PV}
-		 || ( app-accessibility/festival
-		      app-accessibility/epos
-		      app-accessibility/flite
-		      app-accessibility/freetts
-		      app-accessibility/mbrola ) )"
+DEPEND="gstreamer? ( >=media-libs/gstreamer-0.8.7 )"
+
+RDEPEND="${DEPEND}
+	arts? ( || ( app-accessibility/festival
+		     app-accessibility/epos
+		     app-accessibility/flite
+		     app-accessibility/freetts
+		     app-accessibility/mbrola ) )"
+
+src_compile() {
+	myconf="$(use_enable gstreamer kttsd-gstreamer)"
+
+	kde_src_compile
+}
